# libchess

./: .clang-format  .clang-tidy  CMakeLists.txt  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
demo/: main.cpp
demo-gui/: game.cpp  game.h  main.cpp  sprites.cpp  sprites.h
include/libchess/: board.h  board_rep.h  board_state.h  move.h  piece.h  square.h
include/libchess/internal/: constants.h  log.h  macros.h
src/: board.cpp  board_rep.cpp  board_state.cpp  move.cpp  piece.cpp  square.cpp
src/internal/: constants.cpp  log.cpp
